# project4

./: README.md
Extensions/: CMakeLists.txt  extensions2.cpp
Extensions_task 7_samesprof./: CMakeLists.txt  extension.cpp
Task4/: CMakeLists.txt  task4.cpp
Task4,5,6/: CMakeLists.txt  task4,5,6.cpp
Task7/: CMakeLists.txt  task7.cpp
Uber_Extension/: CMakeLists.txt  uber_extension.cpp
chessboard/: CMakeLists.txt  main.cpp  task1-2-3.cpp
